docs: implement 5 key article improvements across onboarding, tutorials, and tooling